# cf_ai_moin-moin

./: .pre-commit-config.yaml  PROMPTS.md  README.md  biome.json  package.json  pnpm-lock.yaml
agent/: .gitignore  env.d.ts  package.json  pnpm-lock.yaml  worker-configuration.d.ts  wrangler.jsonc
agent/src/: app.tsx  chat.ts  server.ts  tools.ts  types.ts  utils.ts
agent/src/components/: ContextPanel.tsx  ShareButton.tsx  memoized-markdown.tsx
agent/src/components/status-bar/: ClientStatus.tsx
agent/src/components/toast/: Toast.tsx
agent/src/hooks/: useContextEvents.ts
agent/src/providers/: AgentProvider.tsx  ToastProvider.tsx  index.tsx
cli/: README.md  pyproject.toml
cli/synapse/: client.py  constants.py  dispatcher.py  main.py  tools.py  ui.py
cli/tests/: test_dispatcher.py
src/: app.tsx  chat.ts  server.ts
